--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,8 +25,7 @@ header {
     color: white;
     float: right;
     font-size: 25px;
-    padding: 21px 0;
-    margin-right: 5px;
+    padding: 15px 15px 0px 0px;
     display: none;
 }
 
@@ -51,6 +50,7 @@ header {
 
 .sign-up {
     background-color: rgba(77, 77, 223);
+    border-radius: 15px;
     color: white;
 }
 
