--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background-color: rgba(120, 189, 216, 0.9);
+    background-color: #BCD4E6;
     height: 60px;
     width: 100%;
     position: fixed;
@@ -60,4 +60,48 @@ header {
 
 .top h1 {
     font-size: 50px;
+}
+
+
+
+.grid-container {
+    background-color: #BCD4E6;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.grid-item {
+    margin: 200px 100px;
+
+
+}
+
+.grid-item .search {
+    width: 80%;
+    height: 6%;
+    background-color: #ffffff;
+    opacity: 1px;
+    box-shadow: 80px 0px 160px 4px #000000;
+    border-radius: 30px;
+
+
+
+}
+
+.search p {
+    padding: 15px 20px;
+}
+
+.grid-container .signup {
+    color: #457B9D;
+    text-decoration: none;
+    justify-content: center;
+    padding-left: 10px;
+}
+
+
+.grid-item img {
+    height: 80%;
+    margin-top: -100px;
 }
