--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,3 +93,19 @@ header {
     height: 80%;
     margin-top: -100px;
 }
+
+.footer-item {
+    float: left;
+    margin-right: 40px;
+    padding: 10px 0px 0px 150px;
+    
+    
+}
+
+.container p{
+    font-size: 13px;
+    color: chocolate;
+    margin-top: -10px;
+    text-decoration: none;
+    
+}
