--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
 }
@@ -92,4 +96,168 @@ header {
 .grid-item img {
     height: 80%;
     margin-top: -100px;
+}
+
+.content-wrapper {
+    width: auto;
+    height: auto;
+    background-color: #efefdc;
+    opacity: 0, 5;
+    display: grid;
+    padding-bottom: 30px;
+}
+
+.container {
+    padding-left: 20px;
+}
+
+.container h1 {
+    text-align: center;
+    font-size: 40px;
+    letter-spacing: 3px;
+    margin-bottom: 10px;
+}
+
+.container h2 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.content-list {
+    display: block;
+    width: auto;
+    height: auto;
+    background-color: #FFFFFF;
+    float: left;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    border-radius: 10px;
+}
+
+.content-list p {
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+.list {
+    margin-top: 10px;
+    font-size: 30px;
+    list-style: none;
+}
+
+.list li:hover {
+    transition: 1s;
+    background-color: #F5F5F5;
+    opacity: 0.7;
+}
+
+.list li:active {
+    position: relative;
+    top: 7px;
+    background-color: #F5F5F5;
+    opacity: 1;
+}
+
+.list li {
+    line-height: 75px;
+    margin-left: 10px;
+    text-indent: 10px;
+    color: black;
+}
+
+.jobs {
+    width: auto;
+    padding-left: 20px;
+    display: grid;
+}
+
+.job {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.heading {
+    line-height: 10px;
+}
+
+.heading h2 {
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 30px;
+    text-align: left;
+}
+
+.heading p {
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.subheading {
+    line-height: 5px;
+    text-indent: 10px;
+}
+
+.subheading p {
+    font-weight: lighter;
+    color: #d9d9d9
+}
+
+.text-contents {
+    padding-top: 10px;
+    font-size: 20px;
+}
+
+.text-location {
+    color: #3499cb;
+}
+
+.question-wrapper {
+    width: auto;
+    height: 600px;
+    background-color: #bdd5f5;
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
+.head-title {
+    text-align: center;
+    line-height: 8px;
+    padding-bottom: 20px;
+}
+
+.head-title h3 {
+    letter-spacing: 5px;
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+.head-title h4 {
+    font-size: 20px;
+    margin-top: 35px;
+    font-weight: normal;
+    letter-spacing: 2px;
+}
+
+.icon {
+    float: left;
+}
+
+.question {
+    width: auto;
+    height: auto;
+    display: block;
+    text-indent: 20%;
+    text-align: left;
+    line-height: 5px;
+    font-size: 20px;
+}
+
+.answer-text {
+    padding-bottom: 20px;
 }
