fix conflict container

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -289,7 +289,7 @@ textarea {
     padding: 10px 0px 0px 150px;
 }
 
-.container p {
+.footer-container p {
     font-size: 13px;
     color: chocolate;
     margin-top: -10px;
